adding proposal doc

--- a/team_proposal.Rmd
+++ b/team_proposal.Rmd
@@ -1,7 +1,14 @@
 ---
-title: "Team Proposal"
-author: "Angelica Bailey, Shivalika Chavan, Julia Gray \n"
-date: "2025-11-05"
+title: "Team Proposal: The House Always Wins? Exploring the Societal Costs of Legal Sports Gambling"
+author: "Angelica Bailey (ab6168), Shivalika Chavan (sc5826), Julia Gray (jg5038) \n"
+date: "2025-11-07"
 output: github_document
 ---
 
+**[Link to GitHub Repo](https://github.com/shivalikachavan/p8105_final)**
+
+#### Motivation
+#### Intended Final Products
+#### Anticipated Data Sources
+#### Planned Analyses, Visualizations, Coding Challenges
+#### Planned Timeline
