--- a/team_proposal.Rmd
+++ b/team_proposal.Rmd
@@ -8,6 +8,9 @@ output: github_document
 **[Link to GitHub Repo](https://github.com/shivalikachavan/p8105_final)**
 
 #### Motivation
+
+Given the explosion in sports gambling following the Supreme Court's decision in 2018 rescinding the federal ban we want to look at the public health consequences.
+
 #### Intended Final Products
 #### Anticipated Data Sources
 #### Planned Analyses, Visualizations, Coding Challenges
