--- a/team_proposal.Rmd
+++ b/team_proposal.Rmd
@@ -21,11 +21,9 @@ The specific questions we aim to answer are:
 
 #### Intended Final Products
 
--   Exploratory data analyses of key variables
-
--   Statistical report detailing methods & analyses, results, and discussion
-
--   Webpage and screencast describing our project
+*  Exploratory data analyses of key variables
+* Statistical report detailing methods & analyses, results, and discussion
+* Webpage and screencast describing our project
 
 #### Anticipated Data Sources
 
