--- a/team_proposal.Rmd
+++ b/team_proposal.Rmd
@@ -38,8 +38,8 @@ iii. NY Council on Problem Gambling: <https://nyproblemgambling.org/resource-lib
 * **November 6–12:** **Finalize Data & Variables** - Finalize all data sources and variables required for analysis.
 * **November 13–23:** **Individual Analysis Work** - Execute and complete all individual components of the project analysis.
 * **November 24–26:** **Review, Edit, & Visualizations** - Review and incorporate any edits/changes to the analysis. Make all data visualizations look pretty + cohesive
-* **November 27–28:** - Scheduled break for Thanksgiving (and maybe some light sports betting)
-* **November 29–December 1:** - Draft of the final project report.
-* **December 2–4:** - Transfer all materials (proposal, analysis, final report) to the project webpage (and make things look nice).
-* **December 5:** - Record the final project presentation screencast.
+* **November 27–28:** Scheduled break for Thanksgiving (and maybe some light sports betting)
+* **November 29–December 1:** Draft of the final project report.
+* **December 2–4:** Transfer all materials (proposal, analysis, final report) to the project webpage (and make things look nice).
+* **December 5:** Record the final project presentation screencast.
 * **December 6:** Complete all final submissions.
