--- a/team_proposal.Rmd
+++ b/team_proposal.Rmd
@@ -17,7 +17,7 @@ The specific questions we aim to answer are:
 
 2.  Does legalized sports gambling have a negative effect on public health outcomes? This involves analyzing changes in rates of depression (or other mental disorders), domestic violence, and substance abuse in states where sports betting is legal.
 
-3.  Using the 2018 as the inflection point, are these health outcomes stratified by demographics (age, sex, race, tax bracket, and education level) and state?
+3.  Using the each state's legalization dat (if one exists) as the inflection point, are these health outcomes stratified by demographics (age, sex, race, tax bracket, and education level) and state?
 
 #### Intended Final Products
 
@@ -37,7 +37,7 @@ iii. NY Council on Problem Gambling: <https://nyproblemgambling.org/resource-lib
 
 * **November 6–12:** **Finalize Data & Variables** - Finalize all data sources and variables required for analysis.
 * **November 13–23:** **Individual Analysis Work** - Execute and complete all individual components of the project analysis.
-* **November 24–26:** **Review, Edit, & Visualizations** - Review and incorporate any edits/changes to the analysis. Make all data visualizations look pretty + cohesive
+* **November 24–26:** **Review, Edit, & Visualizations** - Review and incorporate any edits/changes to the analysis. Make all data visualizations look pretty + cohesive. 
 * **November 27–28:** Scheduled break for Thanksgiving (and maybe some light sports betting)
 * **November 29–December 1:** Draft of the final project report.
 * **December 2–4:** Transfer all materials (proposal, analysis, final report) to the project webpage (and make things look nice).
