adding planned analyses and challenges

--- a/team_proposal.Rmd
+++ b/team_proposal.Rmd
@@ -35,13 +35,19 @@ iii. NY Council on Problem Gambling: <https://nyproblemgambling.org/resource-lib
 
 #### Planned Analyses, Visualizations, Coding Challenges
 
+-   Visualizations: State by state choropleth of total sports gambling handle,
+
+-   Analyses: Incidence of health outcomes before and after sports gambling legalization with hypothesis testing and linear modeling
+
+-   Coding challenges: Normalizing all state data to preimposed legalization (not all states legalized in 2018), managing missing data
+
 #### Planned Timeline
 
-* **November 6–12:** **Finalize Data & Variables** - Finalize all data sources and variables required for analysis.
-* **November 13–23:** **Individual Analysis Work** - Execute and complete all individual components of the project analysis.
-* **November 24–26:** **Review, Edit, & Visualizations** - Review and incorporate any edits/changes to the analysis. Make all data visualizations look pretty + cohesive
-* **November 27–28:** - Scheduled break for Thanksgiving (and maybe some light sports betting)
-* **November 29–December 1:** - Draft of the final project report.
-* **December 2–4:** - Transfer all materials (proposal, analysis, final report) to the project webpage (and make things look nice).
-* **December 5:** - Record the final project presentation screencast.
-* **December 6:** Complete all final submissions.
+-   **November 6–12:** **Finalize Data & Variables** - Finalize all data sources and variables required for analysis.
+-   **November 13–23:** **Individual Analysis Work** - Execute and complete all individual components of the project analysis.
+-   **November 24–26:** **Review, Edit, & Visualizations** - Review and incorporate any edits/changes to the analysis. Make all data visualizations look pretty + cohesive
+-   **November 27–28:** - Scheduled break for Thanksgiving (and maybe some light sports betting)
+-   **November 29–December 1:** - Draft of the final project report.
+-   **December 2–4:** - Transfer all materials (proposal, analysis, final report) to the project webpage (and make things look nice).
+-   **December 5:** - Record the final project presentation screencast.
+-   **December 6:** Complete all final submissions.
