--- a/team_proposal.Rmd
+++ b/team_proposal.Rmd
@@ -13,38 +13,35 @@ Following the [2018 Supreme Court decision](https://www.klgates.com/Supreme-Cour
 
 The specific questions we aim to answer are:
 
-1.  Did the total (inflation-adjusted) handle (total amount of money wagered) for sportsbooks increase significantly across states after 2018?
+1.  Did the total (inflation-adjusted) handle (total amount of money wagered) for sports books increase significantly across states after 2018?
 
 2.  Does legalized sports gambling have a negative effect on public health outcomes? This involves analyzing changes in rates of depression (or other mental disorders), domestic violence, and substance abuse in states where sports betting is legal.
 
-3.  Using the each state's legalization dat (if one exists) as the inflection point, are these health outcomes stratified by demographics (age, sex, race, tax bracket, and education level) and state?
+3.  Using the each state's legalization date (if one exists) as the inflection point, are these health outcomes stratified by demographics (age, sex, race, tax bracket, and education level) and state?
 
 #### Intended Final Products
 
 *  Exploratory data analyses of key variables
 * Statistical report detailing methods & analyses, results, and discussion
-* Webpage and screencast describing our project
+* Webpage and screen cast describing our project
 
 #### Anticipated Data Sources
 
-i.  American Gaming Association: <https://www.americangaming.org/research/state-of-play-map/>
-ii. CDC Behavioral Risk Factor Surveillance System: <https://www.cdc.gov/brfss/>
-iii. NY Council on Problem Gambling: <https://nyproblemgambling.org/resource-lib-item/sports-betting-research-data-summary/#SUD>
+* American Gaming Association: <https://www.americangaming.org/research/state-of-play-map/>
+* CDC Behavioral Risk Factor Surveillance System: <https://www.cdc.gov/brfss/>
+* NY Council on Problem Gambling: <https://nyproblemgambling.org/resource-lib-item/sports-betting-research-data-summary/#SUD>
+* US Sports Betting Revenue & Handle
+<https://www.legalsportsreport.com/sports-betting-states/revenue/>
 
 #### Planned Analyses, Visualizations, Coding Challenges
 
--   Visualizations: State by state choropleth of total sports gambling handle,
-
--   Analyses: Incidence of health outcomes before and after sports gambling legalization with hypothesis testing and linear modeling
-
--   Coding challenges: Normalizing all state data to preimposed legalization (not all states legalized in 2018), managing missing data
-
 #### Planned Timeline
+
 * **November 6–12:** **Finalize Data & Variables** - Finalize all data sources and variables required for analysis.
 * **November 13–23:** **Individual Analysis Work** - Execute and complete all individual components of the project analysis.
 * **November 24–26:** **Review, Edit, & Visualizations** - Review and incorporate any edits/changes to the analysis. Make all data visualizations look pretty + cohesive. 
 * **November 27–28:** Scheduled break for Thanksgiving (and maybe some light sports betting)
 * **November 29–December 1:** Draft of the final project report.
 * **December 2–4:** Transfer all materials (proposal, analysis, final report) to the project webpage (and make things look nice).
-* **December 5:** Record the final project presentation screencast.
+* **December 5:** Record the final project presentation screen cast.
 * **December 6:** Complete all final submissions.
