--- a/team_proposal.Rmd
+++ b/team_proposal.Rmd
@@ -35,6 +35,10 @@ The specific questions we aim to answer are:
 
 #### Planned Analyses, Visualizations, Coding Challenges
 
+* Visualizations: State by state choropleth of total sports gambling handle,
+* Analyses: Incidence of health outcomes before and after sports gambling legalization with hypothesis testing and linear modeling
+* Coding challenges: Normalizing all state data to pre-imposed legalization (not all states legalized in 2018), managing missing data
+
 #### Planned Timeline
 
 * **November 6–12:** **Finalize Data & Variables** - Finalize all data sources and variables required for analysis.
