--- a/team_proposal.Rmd
+++ b/team_proposal.Rmd
@@ -35,7 +35,7 @@ The specific questions we aim to answer are:
 
 #### Planned Analyses, Visualizations, Coding Challenges
 
-* Visualizations: State by state choropleth of total sports gambling handle,
+* Visualizations: State by state choropleth of total sports gambling handle, trend line of incidence of depression for states that have legalized sports gambling vs. have not over time (normalized to date of legalization for each state).
 * Analyses: Incidence of health outcomes before and after sports gambling legalization with hypothesis testing and linear modeling
 * Coding challenges: Normalizing all state data to pre-imposed legalization (not all states legalized in 2018), managing missing data
 
