--- a/eda/couture_et_al_data_exploration.Rmd
+++ b/eda/couture_et_al_data_exploration.Rmd
@@ -12,7 +12,7 @@ library(haven)
 
 ## Reading Couture Data (from STATA)
 ```{r}
-couture_data <- read_dta("./data/couture_et_al_2024_data_code/brfss17_20.dta") |> 
+couture_data <- read_dta("../data/couture_et_al_2024_data_code/brfss17_20.dta") |> 
   select(-`_ageg5yr`, -`_age80`) |> 
   janitor::clean_names() |>
   mutate(
